split RestController into 3 different controllers
